--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: 5
   username: root
   password: root
-  socket: /var/lib/mysql/mysql.sock
+
 
 development:
   <<: *default
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: c360_production
-  username: c360
-  password: <%= ENV['C360_DATABASE_PASSWORD'] %>
+  username: cmgeeks
+  socket: /var/lib/mysql/mysql.sock
+  password: c360PW@)!$
